--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "dependencies": {
-    "express": "^5.1.0",
-    "git": "^0.1.5",
-    "mongoose": "^8.14.3"
-  },
   "name": "health-up",
   "version": "1.0.0",
   "description": "a personal wellbeing platform.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +14,11 @@
     "first-project"
   ],
   "author": "anuj pawar",
-  "license": "ISC"
+  "license": "ISC",
+  
+  "dependencies": {
+    "express": "^5.1.0",
+    "git": "^0.1.5",
+    "mongoose": "^8.14.3"
+  }
 }
