--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   ],
   "author": "anuj pawar",
   "license": "ISC",
-  
   "dependencies": {
     "express": "^5.1.0",
     "git": "^0.1.5",
     "mongoose": "^8.14.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
