--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=8000 
 MONGODB_URI=mongodb+srv://anujp125:anujp1250@cluster0.xux1rmq.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=DEE34TF544&53#*346:₹@23EDD
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_ACCESS_TOKEN=CFFGH&44'GT4432RGG:--_&**/---55455₹##@werfftd3erDGHYT
+REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=anujp
+CLOUDINARY_API_KEY=559634673819649
+CLOUDINARY_API_SECRET=8It0emI0rNQKO_Zseowk2Izmzw8
