--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
   "author": "anuj pawar",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "git": "^0.1.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.3"
+    "mongoose": "^8.14.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
